force-app/main/default/objects/Agency_Role__c/Agency_Role__c.object-meta.xml
<CustomObject>
    <label>Agency Role</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Agency Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>