force-app/main/default/objects/Agency_Role__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipLabel>Agency Roles</relationshipLabel>
    <relationshipName>Agency_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>