force-app/main/default/objects/Agency_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Code Enforcement</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Hired Investigator</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Petitioner</fullName>
            </value>
            <value>
                <fullName>Placement Partner</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Rescue Group</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Animal Care and Control</fullName>
                <isActive>false</isActive>
                <label>Animal Care and Control</label>
            </value>
            <value>
                <fullName>Animal Control</fullName>
                <isActive>false</isActive>
                <label>Animal Control</label>
            </value>
            <value>
                <fullName>Animal Welfare Organization</fullName>
                <isActive>false</isActive>
                <label>Animal Welfare Organization</label>
            </value>
            <value>
                <fullName>County Government</fullName>
                <isActive>false</isActive>
                <label>County Government</label>
            </value>
            <value>
                <fullName>Enforcement</fullName>
                <isActive>false</isActive>
                <label>Enforcement</label>
            </value>
            <value>
                <fullName>Federal Agency</fullName>
                <isActive>false</isActive>
                <label>Federal Agency</label>
            </value>
            <value>
                <fullName>Law_Firm</fullName>
                <isActive>false</isActive>
                <label>Law Firm</label>
            </value>
            <value>
                <fullName>Lobbying Firm</fullName>
                <isActive>false</isActive>
                <label>Lobbying Firm</label>
            </value>
            <value>
                <fullName>Private company</fullName>
                <isActive>false</isActive>
                <label>Private company</label>
            </value>
            <value>
                <fullName>State Agency</fullName>
                <isActive>false</isActive>
                <label>State Agency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>